--- a/HelloDoc/Views/DashBoard/Index.cshtml
+++ b/HelloDoc/Views/DashBoard/Index.cshtml
@@ -1,4 +1,4 @@
-﻿
+﻿@model List<DAL.ViewModel.Patient_Dash>
 @{
     ViewData["Title"] = "Index";
     Layout = "~/Views/Shared/_Layout-1.cshtml";
@@ -14,8 +14,8 @@
 
     </ul>
     <div class="tab-content" id="pills-tabContent">
-        <partial name="Patient_Dashboard"></partial>
-        <div class="tab-pane fade" id="pills-profile" role="tabpanel" aria-labelledby="pills-profile-tab" tabindex="0">.....</div>
+        @Html.Partial("Patient_Dashboard",Model)
+        <div class="tab-pane fade" id="pills-profile" role="tabpanel" aria-labelledby="pills-profile-tab" tabindex="0">.....................</div>
 
     </div>
 </div>
