--- a/HelloDoc/Views/DashBoard/Patient_Dashboard.cshtml
+++ b/HelloDoc/Views/DashBoard/Patient_Dashboard.cshtml
@@ -1,4 +1,5 @@
 ﻿@model List<DAL.ViewModel.Patient_Dash>
+
 <div class="tab-pane fade show active " id="pills-home" role="tabpanel" aria-labelledby="pills-home-tab" tabindex="0" style="background-color:#E9ECEF">
 
     <div class="mx-auto pt-5" style="width:95%;">
@@ -19,8 +20,8 @@
                             <p> Here I Want to Create Request For...</p>
 
                             <div class="d-flex justify-content-center">
-                              <button type="button" class="btn btn-info" data-bs-dismiss="modal">Me</button>
-                                <button type="button" class="btn btn-outline-info ms-3">Some One else</button>
+                                <a asp-action="Me" asp-controller="ME_ForSomeOne"> <button type="button" class="btn btn-info" data-bs-dismiss="modal">Me</button></a>
+                                <a asp-action="SomeOne" asp-controller="ME_ForSomeOne"> <button type="button" class="btn btn-outline-info ms-3">Some One else</button></a>
                             </div>
                             <div class="d-flex justify-content-end mt-3">
                                 <button type="button" class="btn btn-info" data-bs-dismiss="modal">Continue</button>
@@ -33,6 +34,7 @@
                 </div>
             </div>
        </div>
+
         <table class="table text-center">
             <thead class="table-secondary">
                 <tr>
@@ -53,8 +55,8 @@
                                 
                             @if(item.FilePath.Count() > 1)
                             {
-                                  <button type="button" class="btn btn-outline-info mx-3">View Document</button>
-                            }
+                                    <a asp-action="ViewDocs" asp-route-requestid="@item.requestid">  <button type="button" class="btn btn-outline-info mx-3">View Document</button> </a>
+                                }
                             }
                             else
                             {
@@ -70,5 +72,3 @@
    </div>
     
  
-
-</div>
