--- a/HelloDoc/Views/DashBoard/Index.cshtml
+++ b/HelloDoc/Views/DashBoard/Index.cshtml
@@ -8,14 +8,14 @@
         <li class="nav-item " role="presentation">
             <button class="nav-link text-info " id="pills-home-tab" data-bs-toggle="pill" data-bs-target="#pills-home" type="button" role="tab" aria-controls="pills-home" aria-selected="true">Home</button>
         </li>
-        <li class="nav-item " role="presentation">
-            <button class="nav-link text-info" id="pills-profile-tab" data-bs-toggle="pill" data-bs-target="#pills-profile" type="button" role="tab" aria-controls="pills-profile" aria-selected="false">Profile</button>
+        <li class="nav-item " role="presentation" >
+            <a asp-action="Patient_profile" asp-controller="DashBoard" style="text-decoration:none!important "> <button class="nav-link text-info" id="pills-profile-tab" data-bs-toggle="pill" data-bs-target="#pills-profile" type="button" role="tab" aria-controls="pills-profile" aria-selected="false">Profile</button></a>
         </li>
 
     </ul>
     <div class="tab-content" id="pills-tabContent">
         @Html.Partial("Patient_Dashboard",Model)
-        <div class="tab-pane fade" id="pills-profile" role="tabpanel" aria-labelledby="pills-profile-tab" tabindex="0">.....................</div>
+        <a   class="tab-pane fade" id="pills-profile" role="tabpanel" aria-labelledby="pills-profile-tab" tabindex="0">..............</a>
 
     </div>
 </div>
