--- a/HelloDoc/Views/Shared/_Layout-1.cshtml
+++ b/HelloDoc/Views/Shared/_Layout-1.cshtml
@@ -8,9 +8,9 @@
 
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/HelloDoc.styles.css" asp-append-version="true" />
-    <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" asp-append-version="true" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" asp-append-version="true" />
+    <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
 </head>
 <body>
     <header>
@@ -49,11 +49,50 @@
         </main>
     </div>
 
+   
+        <!-- jQuery script -->
+        <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+        <script src="~/lib/jquery/jquery.min.js"></script>
 
-    <script src="~/lib/jquery/dist/jquery.min.js"></script>
-    <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+        <script>
+        function toggleEdit() {
+            // Get all input fields within the form excluding the input with id "Email"
+            var inputFields = document.querySelectorAll('form input');
+
+            // Toggle the disabled attribute for each input field
+            inputFields.forEach(function (input) {
+                input.disabled = !input.disabled;
+            });
+
+            $("#EditBtn").hide();
+            $("#SaveBtn").show();
+            $("#CancleBtn").show();
+        }
+
+
+            function toggleCancel() {
+                var inputFields = document.querySelectorAll('form input');
+
+                // Toggle the disabled attribute for each input field
+                inputFields.forEach(function (input) {
+                    input.disabled = !input.disabled;
+                });
+
+                $("#EditBtn").show();
+                $("#SaveBtn").hide();
+                $("#CancleBtn").hide();
+            }
+
+        </script>
+   
+
+
+
+
     <script src="~/js/site.js" asp-append-version="true"></script>
+    <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/js/Patient_request.js" asp-append-version="true"></script>
+    <script src="~/lib/jquery/dist/jquery.min.js"></script>
     @await RenderSectionAsync("Scripts", required: false)
 </body>
 </html>
