--- a/HelloDoc/Views/DashBoard/Patient_Profile.cshtml
+++ b/HelloDoc/Views/DashBoard/Patient_Profile.cshtml
@@ -184,6 +184,9 @@
     <script src="~/lib/jquery/jquery.min.js"></script>
 
     <script>
+
+        $("#CancleBtn").hide();
+        $("#SaveBtn").hide();
         function toggleEdit() {
 
             var inputFields = document.querySelectorAll('form input');
