--- a/HelloDoc/Views/Login/Patient_ResetPassword.cshtml
+++ b/HelloDoc/Views/Login/Patient_ResetPassword.cshtml
@@ -1,4 +1,4 @@
-﻿
+﻿@model DAL.ViewModel.Patient_ResetPassword
 @{
     ViewData["Title"] = "Patient_ResetPassword";
     Layout = null;
@@ -44,6 +44,8 @@
           </div>
 
           <!-- login form -->
+
+            <form method="post">
           <div class="mt-4">
             <a asp-action="Patient_login" class="text-info fs-5 back">
               <svg
@@ -67,6 +69,7 @@
               <div class="form-floating d-flex mb-3 border rounded inps">
                 <input
                   type="email"
+                  asp-for="Email"
                   class="form-control border-0 no-border"
                   id="floatingInput"
                   placeholder="name@example.com"
@@ -76,12 +79,14 @@
                   alt=""
                   class="pe-3 bg-white"
                 />
-                <label for="floatingInput">Username</label>
+                <label for="floatingInput">Email</label>
               </div>
             </div>
-            <button class="btn btn-info text-white" type="button">
+            <button class="btn btn-info text-white" type="submit">
               Reset Password
             </button>
+
+           </form>
             <div class="mt-3 d-block">
               <a
                 class="text-center text-info fs-5"
@@ -101,7 +106,7 @@
                     d="M11.354 1.646a.5.5 0 0 1 0 .708L5.707 8l5.647 5.646a.5.5 0 0 1-.708.708l-6-6a.5.5 0 0 1 0-.708l6-6a.5.5 0 0 1 .708 0"
                   />
                 </svg>
-                       <a asp-action="Patient_login" style="text-decoration:none"> <span class="text-info">Back to login</span></a>
+               <a asp-action="Patient_login" style="text-decoration:none"> <span class="text-info">Back to login</span></a>
               </a>
             </div>
           </div>
