--- a/HelloDoc/Views/Shared/_Admin_Dash.cshtml
+++ b/HelloDoc/Views/Shared/_Admin_Dash.cshtml
@@ -8,9 +8,10 @@
 
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/HelloDoc.styles.css" asp-append-version="true" />
+    <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" asp-append-version="true" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" asp-append-version="true" />
-    <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css" />
 </head>
 <body>
     <header>
@@ -19,11 +20,11 @@
                 <!-- -----------------nav--------------- -->
                 <div class="col col-12 d-flex mb-1 flex-row justify-content-between">
                     <div class="doct-logo">
-                        <img src="../images/doct-logo-2.png" alt="" style="height:5rem"/>
+                        <img src="../images/doct-logo-2.png" alt="" style="height:5rem" />
                     </div>
                     <div class=" float-end ">
                         <span class="fw-bold me-2"> Welcome:@ViewBag.username</span>
-                        <a asp-action="Logout" asp-controller="Login"> 
+                        <a asp-action="" asp-controller="">
                             <button type="submit" class="btn border-info bg-white fw-2 text-info me-2 border border-2"
                                     style="height:3rem">
                                 logout
@@ -44,11 +45,37 @@
                 <!-- -----------------nav--------------- -->
             </div>
             <!-- Nav tabs -->
-       
+
         </div>
+      <div class="ms-1">
+            <ul class="nav nav-pills-info nav-underline  mb-1 shadow  ms-3" id="pills-tab" role="tablist">
+                <li class="nav-item " role="presentation">
+                    <a> <button class="nav-link text-info" id="pills-home-tab" data-bs-toggle="pill" data-bs-target="#pills-home" type="button" role="tab" aria-controls="pills-home" aria-selected="true">DashBoard</button></a>
+                </li>
+                <li class="nav-item" role="presentation">
+                    <a>  <button class="nav-link text-info" id="pills-profile-tab" data-bs-toggle="pill" data-bs-target="#pills-profile" type="button" role="tab" aria-controls="pills-profile" aria-selected="false">Provider Location</button></a>
+                </li>
+                <li class="nav-item" role="presentation">
+                    <button class="nav-link text-info" id="pills-contact-tab" data-bs-toggle="pill" data-bs-target="#pills-contact" type="button" role="tab" aria-controls="pills-contact" aria-selected="false">My Profile</button>
+                </li> 
+                <li class="nav-item" role="presentation">
+                    <button class="nav-link text-info" id="pills-contact-tab" data-bs-toggle="pill" data-bs-target="#pills-contact" type="button" role="tab" aria-controls="pills-contact" aria-selected="false">Provider</button>
+                </li>
+                <li class="nav-item" role="presentation">
+                    <button class="nav-link text-info" id="pills-contact-tab" data-bs-toggle="pill" data-bs-target="#pills-contact" type="button" role="tab" aria-controls="pills-contact" aria-selected="false">Partner</button>
+                </li> 
+                <li class="nav-item" role="presentation">
+                    <button class="nav-link text-info" id="pills-contact-tab" data-bs-toggle="pill" data-bs-target="#pills-contact" type="button" role="tab" aria-controls="pills-contact" aria-selected="false">Access</button>
+                </li>
+                <li class="nav-item" role="presentation">
+                    <button class="nav-link text-info" id="pills-contact-tab" data-bs-toggle="pill" data-bs-target="#pills-contact" type="button" role="tab" aria-controls="pills-contact" aria-selected="false">Record</button>
+                </li>
+            </ul>
+      </div>
+     
     </header>
     <div class="container-fluid ">
-        <main role="main" class="pb-3">
+        <main role="main">
             @RenderBody()
         </main>
     </div>
@@ -58,9 +85,9 @@
             <span>Terms Of Condition | Privacy Policy</span>
         </div>
     </footer>
-      
-   
 
+
+    
     <script src="~/js/site.js" asp-append-version="true"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/js/Patient_request.js" asp-append-version="true"></script>
