--- a/HelloDoc/Views/Home/Index.cshtml
+++ b/HelloDoc/Views/Home/Index.cshtml
@@ -30,7 +30,7 @@
                  <a asp-action="patient_submit_request">
                         <button class="btn btn-info my-auto text-center text-white fs-2 py-3 pt-1 btn-style"
                                 type="button">
-                            Submit A request
+                            Submit A Request
                         </button>
                  </a>
                   <a asp-controller="Login" asp-action="Patient_login">
