--- a/HelloDoc/Views/Request/Patient_Request.cshtml
+++ b/HelloDoc/Views/Request/Patient_Request.cshtml
@@ -23,7 +23,7 @@
             <!-- -----------------back button-------------------------- -->
             <div class="bg-body-secondary" style="background-color:#E9ECEF">
                 <div class="d-flex justify-content-end back">
-                    <a asp-action="Patient_submit_request" class="btn btn-outline-info text-center p-2 btn-p">
+                    <a asp-action="Patient_submit_request" class="btn btn-outline-info text-center p-2 btn-p" asp-controller="Home"> 
                         <svg xmlns="http://www.w3.org/2000/svg"
                              width="16"
                              height="16"
