--- a/HelloDoc/Views/Admin_Dash/Admin_Table.cshtml
+++ b/HelloDoc/Views/Admin_Dash/Admin_Table.cshtml
@@ -7,7 +7,7 @@
 
 <table class="table text-center table-responsive-lg">
     <thead class="table-secondary">
-        <tr>
+        <tr class="fs-5">
             <th scope="col">Name</th>
             <th scope="col"></th>
             <th scope="col">Date of Birth</th>
@@ -20,7 +20,7 @@
             <th scope="col">Action</th>
         </tr>
     </thead>
-    <tbody >
+    <tbody class="fs-5" >
         @foreach (var item in Model)
         {
 
@@ -42,7 +42,7 @@
                     <td class="my-auto"><span>Patient </span>@item.Requestor</td>
                     <td class="my-auto">@item.RequestedDate</td>
                     <td class="my-auto ">
-                        <button class="btn border border-2 border-dark rounded my-1">
+                        <button class="btn border border-2 border-dark rounded my-1 btn-success">
                             <svg class="me-2" xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-telephone-fill" viewBox="0 0 16 16">
                                 <path fill-rule="evenodd" d="M1.885.511a1.745 1.745 0 0 1 2.61.163L6.29 2.98c.329.423.445.974.315 1.494l-.547 2.19a.68.68 0 0 0 .178.643l2.457 2.457a.68.68 0 0 0 .644.178l2.189-.547a1.75 1.75 0 0 1 1.494.315l2.306 1.794c.829.645.905 1.87.163 2.611l-1.034 1.034c-.74.74-1.846 1.065-2.877.702a18.6 18.6 0 0 1-7.01-4.42 18.6 18.6 0 0 1-4.42-7.009c-.362-1.03-.037-2.137.703-2.877z" />
                             </svg>@item.PhoneNumber
@@ -51,14 +51,14 @@
                     <td class="my-auto">@item.Address</td>
                     <td class="my-auto">@item.Notes</td>
                     <td class="my-auto">
-                        <button class="btn border rounded ">
+                        <button class="btn border rounded btn-success ">
                             <svg class="me-2" xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-person-lines-fill" viewBox="0 0 16 16">
                                 <path d="M6 8a3 3 0 1 0 0-6 3 3 0 0 0 0 6m-5 6s-1 0-1-1 1-4 6-4 6 3 6 4-1 1-1 1zM11 3.5a.5.5 0 0 1 .5-.5h4a.5.5 0 0 1 0 1h-4a.5.5 0 0 1-.5-.5m.5 2.5a.5.5 0 0 0 0 1h4a.5.5 0 0 0 0-1zm2 3a.5.5 0 0 0 0 1h2a.5.5 0 0 0 0-1zm0 3a.5.5 0 0 0 0 1h2a.5.5 0 0 0 0-1z" />
                             </svg>Provider
                         </button>
                     </td>
                     <td class="my-auto">
-                        <button type="button" class="btn border rounded  dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
+                        <button type="button" class="btn border border-2 border-dark rounded  dropdown-toggle btn-success" data-bs-toggle="dropdown" aria-expanded="false">
                             Action
                         </button>
                         <ul class="dropdown-menu ">
@@ -74,7 +74,7 @@
             } 
             
             
-            if (item.requesttypeid == 2)
+            else if (item.requesttypeid == 2)
             {
               @*   <tr style="background-color:#5FBC61 !important; color:white !important;"> *@
                   <tr class="table-warning">
@@ -92,26 +92,31 @@
                     <td class="my-auto"><span>Patient </span>@item.Requestor</td>
                     <td class="my-auto">@item.RequestedDate</td>
                     <td class="my-auto ">
-                        <button class="btn border border-2 border-dark rounded my-1">
+                        <button class="btn border border-2 border-dark rounded my-1 btn-warning">
                             <svg class="me-2" xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-telephone-fill" viewBox="0 0 16 16">
                                 <path fill-rule="evenodd" d="M1.885.511a1.745 1.745 0 0 1 2.61.163L6.29 2.98c.329.423.445.974.315 1.494l-.547 2.19a.68.68 0 0 0 .178.643l2.457 2.457a.68.68 0 0 0 .644.178l2.189-.547a1.75 1.75 0 0 1 1.494.315l2.306 1.794c.829.645.905 1.87.163 2.611l-1.034 1.034c-.74.74-1.846 1.065-2.877.702a18.6 18.6 0 0 1-7.01-4.42 18.6 18.6 0 0 1-4.42-7.009c-.362-1.03-.037-2.137.703-2.877z" />
                             </svg>@item.PhoneNumber
-                        </button><br /><span>(Family/Friend) </span>
+                        </button><br /><span>(Family/Friend) </span> <br/>
+                        <button class="btn border border-2 border-dark rounded my-1 btn-warning">
+                            <svg class="me-2" xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-telephone-fill" viewBox="0 0 16 16">
+                                <path fill-rule="evenodd" d="M1.885.511a1.745 1.745 0 0 1 2.61.163L6.29 2.98c.329.423.445.974.315 1.494l-.547 2.19a.68.68 0 0 0 .178.643l2.457 2.457a.68.68 0 0 0 .644.178l2.189-.547a1.75 1.75 0 0 1 1.494.315l2.306 1.794c.829.645.905 1.87.163 2.611l-1.034 1.034c-.74.74-1.846 1.065-2.877.702a18.6 18.6 0 0 1-7.01-4.42 18.6 18.6 0 0 1-4.42-7.009c-.362-1.03-.037-2.137.703-2.877z" />
+                            </svg>@item.PhoneNumber_P
+                        </button><br /><span>(Patient) </span>
                     </td>
                     <td class="my-auto">@item.Address</td>
                     <td class="my-auto">@item.Notes</td>
                     <td class="my-auto">
-                        <button class="btn border rounded ">
+                        <button class="btn border rounded btn-warning  ">
                             <svg class="me-2" xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-person-lines-fill" viewBox="0 0 16 16">
                                 <path d="M6 8a3 3 0 1 0 0-6 3 3 0 0 0 0 6m-5 6s-1 0-1-1 1-4 6-4 6 3 6 4-1 1-1 1zM11 3.5a.5.5 0 0 1 .5-.5h4a.5.5 0 0 1 0 1h-4a.5.5 0 0 1-.5-.5m.5 2.5a.5.5 0 0 0 0 1h4a.5.5 0 0 0 0-1zm2 3a.5.5 0 0 0 0 1h2a.5.5 0 0 0 0-1zm0 3a.5.5 0 0 0 0 1h2a.5.5 0 0 0 0-1z" />
                             </svg>Provider
                         </button>
                     </td>
                     <td class="my-auto">
-                        <button type="button" class="btn border rounded  dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
+                        <button type="button" class="btn  border border-2 border-dark rounded  dropdown-toggle btn-warning" data-bs-toggle="dropdown" aria-expanded="false">
                             Action
                         </button>
-                        <ul class="dropdown-menu ">
+                        <ul class="dropdown-menu">
                             <li><a class="dropdown-item" href="#">Assign Case</a></li>
                             <li><a class="dropdown-item" href="#">View Uploads</a></li>
                             <li><a class="dropdown-item" href="#">View Notes</a></li>
@@ -122,7 +127,7 @@
                     </td>
                 </tr>
             }
-            if (item.requesttypeid == 3)
+           else  if (item.requesttypeid == 3)
             {
               @*   <tr style="background-color:#5FBC61 !important; color:white !important;"> *@
                   <tr class="table-info">
@@ -140,23 +145,29 @@
                     <td class="my-auto"><span>Concierge </span>@item.Requestor</td>
                     <td class="my-auto">@item.RequestedDate</td>
                     <td class="my-auto ">
-                        <button class="btn border border-2 border-dark rounded my-1">
+                        <button class="btn border border-2 border-dark rounded my-1 btn-info">
                             <svg class="me-2" xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-telephone-fill" viewBox="0 0 16 16">
                                 <path fill-rule="evenodd" d="M1.885.511a1.745 1.745 0 0 1 2.61.163L6.29 2.98c.329.423.445.974.315 1.494l-.547 2.19a.68.68 0 0 0 .178.643l2.457 2.457a.68.68 0 0 0 .644.178l2.189-.547a1.75 1.75 0 0 1 1.494.315l2.306 1.794c.829.645.905 1.87.163 2.611l-1.034 1.034c-.74.74-1.846 1.065-2.877.702a18.6 18.6 0 0 1-7.01-4.42 18.6 18.6 0 0 1-4.42-7.009c-.362-1.03-.037-2.137.703-2.877z" />
                             </svg>@item.PhoneNumber
+                        </button><br /><span>(Concierge)</span> <br/>
+                        <button class="btn border border-2 border-dark rounded my-1 btn-info">
+                            <svg class="me-2" xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-telephone-fill" viewBox="0 0 16 16">
+                                <path fill-rule="evenodd" d="M1.885.511a1.745 1.745 0 0 1 2.61.163L6.29 2.98c.329.423.445.974.315 1.494l-.547 2.19a.68.68 0 0 0 .178.643l2.457 2.457a.68.68 0 0 0 .644.178l2.189-.547a1.75 1.75 0 0 1 1.494.315l2.306 1.794c.829.645.905 1.87.163 2.611l-1.034 1.034c-.74.74-1.846 1.065-2.877.702a18.6 18.6 0 0 1-7.01-4.42 18.6 18.6 0 0 1-4.42-7.009c-.362-1.03-.037-2.137.703-2.877z" />
+                            </svg>@item.PhoneNumber_P
                         </button><br /><span>(Patient)</span>
                     </td>
                     <td class="my-auto">@item.Address</td>
                     <td class="my-auto">@item.Notes</td>
                     <td class="my-auto">
-                        <button class="btn border rounded ">
+                        <button class="btn border rounded  btn-info">
                             <svg class="me-2" xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-person-lines-fill" viewBox="0 0 16 16">
                                 <path d="M6 8a3 3 0 1 0 0-6 3 3 0 0 0 0 6m-5 6s-1 0-1-1 1-4 6-4 6 3 6 4-1 1-1 1zM11 3.5a.5.5 0 0 1 .5-.5h4a.5.5 0 0 1 0 1h-4a.5.5 0 0 1-.5-.5m.5 2.5a.5.5 0 0 0 0 1h4a.5.5 0 0 0 0-1zm2 3a.5.5 0 0 0 0 1h2a.5.5 0 0 0 0-1zm0 3a.5.5 0 0 0 0 1h2a.5.5 0 0 0 0-1z" />
                             </svg>Provider
                         </button>
                     </td>
+
                     <td class="my-auto">
-                        <button type="button" class="btn border rounded  dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
+                        <button type="button" class="btn border border-2 border-dark rounded   dropdown-toggle btn-info" data-bs-toggle="dropdown" aria-expanded="false">
                             Action
                         </button>
                         <ul class="dropdown-menu ">
@@ -171,7 +182,7 @@
                 </tr>
             } 
             
-            if (item.requesttypeid == 4)
+          else if (item.requesttypeid == 4)
             {   
               @*   <tr style="background-color:#5FBC61 !important; color:white !important;"> *@
                   <tr class="table-danger">
@@ -189,23 +200,28 @@
                     <td class="my-auto"><span>BusinessPartner </span>@item.Requestor</td>
                     <td class="my-auto">@item.RequestedDate</td>
                     <td class="my-auto ">
-                        <button class="btn border border-2 border-dark rounded my-1">
+                        <button class="btn border border-2 border-dark rounded my-1 btn-danger">
                             <svg class="me-2" xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-telephone-fill" viewBox="0 0 16 16">
                                 <path fill-rule="evenodd" d="M1.885.511a1.745 1.745 0 0 1 2.61.163L6.29 2.98c.329.423.445.974.315 1.494l-.547 2.19a.68.68 0 0 0 .178.643l2.457 2.457a.68.68 0 0 0 .644.178l2.189-.547a1.75 1.75 0 0 1 1.494.315l2.306 1.794c.829.645.905 1.87.163 2.611l-1.034 1.034c-.74.74-1.846 1.065-2.877.702a18.6 18.6 0 0 1-7.01-4.42 18.6 18.6 0 0 1-4.42-7.009c-.362-1.03-.037-2.137.703-2.877z" />
                             </svg>@item.PhoneNumber
+                        </button><br /><span>(BusinessPartner)</span> <br/>
+                        <button class="btn border border-2 border-dark rounded my-1 btn-danger">
+                            <svg class="me-2" xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-telephone-fill" viewBox="0 0 16 16">
+                                <path fill-rule="evenodd" d="M1.885.511a1.745 1.745 0 0 1 2.61.163L6.29 2.98c.329.423.445.974.315 1.494l-.547 2.19a.68.68 0 0 0 .178.643l2.457 2.457a.68.68 0 0 0 .644.178l2.189-.547a1.75 1.75 0 0 1 1.494.315l2.306 1.794c.829.645.905 1.87.163 2.611l-1.034 1.034c-.74.74-1.846 1.065-2.877.702a18.6 18.6 0 0 1-7.01-4.42 18.6 18.6 0 0 1-4.42-7.009c-.362-1.03-.037-2.137.703-2.877z" />
+                            </svg>@item.PhoneNumber_P
                         </button><br /><span>(Patient)</span>
                     </td>
                     <td class="my-auto">@item.Address</td>
                     <td class="my-auto">@item.Notes</td>
                     <td class="my-auto">
-                        <button class="btn border rounded ">
+                        <button class="btn border rounded btn-danger">
                             <svg class="me-2" xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-person-lines-fill" viewBox="0 0 16 16">
                                 <path d="M6 8a3 3 0 1 0 0-6 3 3 0 0 0 0 6m-5 6s-1 0-1-1 1-4 6-4 6 3 6 4-1 1-1 1zM11 3.5a.5.5 0 0 1 .5-.5h4a.5.5 0 0 1 0 1h-4a.5.5 0 0 1-.5-.5m.5 2.5a.5.5 0 0 0 0 1h4a.5.5 0 0 0 0-1zm2 3a.5.5 0 0 0 0 1h2a.5.5 0 0 0 0-1zm0 3a.5.5 0 0 0 0 1h2a.5.5 0 0 0 0-1z" />
                             </svg>Provider
                         </button>
                     </td>
                     <td class="my-auto">
-                        <button type="button" class="btn border rounded  dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
+                        <button type="button" class="btn  border border-2 border-dark rounded  btn-danger  dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
                             Action
                         </button>
                         <ul class="dropdown-menu ">
