--- a/HelloDoc/Views/Shared/_Admin_Dash.cshtml
+++ b/HelloDoc/Views/Shared/_Admin_Dash.cshtml
@@ -16,7 +16,7 @@
 <body>
     <header>
         <div class="container-fluid">
-            <div class="row border border-bottom">
+            <div class="row border border-bottom shadow">
                 <!-- -----------------nav--------------- -->
                 <div class="col col-12 d-flex mb-1 flex-row justify-content-between">
                     <div class="doct-logo">
@@ -47,7 +47,7 @@
             <!-- Nav tabs -->
 
         </div>
-      <div class="ms-1">
+      <div class="ps-1 p-4 fs-5">
             <ul class="nav nav-pills-info nav-underline  mb-1 shadow  ms-3" id="pills-tab" role="tablist">
                 <li class="nav-item " role="presentation">
                     <a> <button class="nav-link text-info" id="pills-home-tab" data-bs-toggle="pill" data-bs-target="#pills-home" type="button" role="tab" aria-controls="pills-home" aria-selected="true">DashBoard</button></a>
@@ -89,9 +89,10 @@
 
     
     <script src="~/js/site.js" asp-append-version="true"></script>
-    <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/js/Patient_request.js" asp-append-version="true"></script>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
+    <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js" asp-append-version="true"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
     @await RenderSectionAsync("Scripts", required: false)
 </body>
 </html>
