--- a/HelloDoc/Views/Admin_Dash/Admin_Dash.cshtml
+++ b/HelloDoc/Views/Admin_Dash/Admin_Dash.cshtml
@@ -130,16 +130,16 @@
                 </svg>
                 <input type="text" class="form-control ms-2 " id="Search" placeholder="Search patient">
             </div>
-            <div class="d-flex  rounded align-items-center ms-2 ps-2" style="width:17rem">
+            <div class="d-flex  rounded align-items-center ms-2 ps-2" style="width:17rem" id="Region">
                 <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 50 50">
                     <path d="M 21 3 C 11.654545 3 4 10.654545 4 20 C 4 29.345455 11.654545 37 21 37 C 24.701287 37 28.127393 35.786719 30.927734 33.755859 L 44.085938 46.914062 L 46.914062 44.085938 L 33.875 31.046875 C 36.43682 28.068316 38 24.210207 38 20 C 38 10.654545 30.345455 3 21 3 z M 21 5 C 29.254545 5 36 11.745455 36 20 C 36 28.254545 29.254545 35 21 35 C 12.745455 35 6 28.254545 6 20 C 6 11.745455 12.745455 5 21 5 z">
                     </path>
                 </svg>
-                <select class="form-select border-0" aria-label="Default select example">
-                    <option selected>All Regions</option>
-                    <option value="1">One</option>
-                    <option value="2">Two</option>
-                    <option value="3">Three</option>
+                <select class="form-select border-0 form-select" aria-label="Default select example" >
+                    <option selected >All Regions</option>
+                    <option  data-value="1">One</option>
+                    <option data-value="2">Two</option>
+                    <option  data-value="3">Three</option>
                 </select>
             </div>
         </div>
@@ -215,6 +215,14 @@
             });
 
 
+
+            $('.form-select').on("change", function () {
+
+                   filtertable()
+
+            });
+
+
            
              // -------------filter btn-----------------------------
             $('.filter-btn').click(function () {
@@ -229,6 +237,8 @@
             $("#Search").on("input", function () {
                 filtertable();
             });
+
+          
             // -------on search value---------------------
 
 
@@ -261,6 +271,11 @@
                 var Filterselect = $('.filter-btn.active').data('value');
                 console.log(Filterselect)
 
+                var selectopt = $(".form-select").find(':selected');
+                var selectvalue = selectopt.data('value');
+
+                var region = $("#Region").val();
+
 
                 if (SearchValue == "" && Filterselect == "") {
                      LoadPartialView("Admin_Table");
@@ -270,7 +285,7 @@
                     $.ajax({
                         type:"GET",
                         url: '@Url.Action("SearchPatient", "Admin_Dash")',
-                        data: { SearchValue: SearchValue, Filterselect: Filterselect },
+                        data: { SearchValue: SearchValue, Filterselect: Filterselect, selectvalue: selectvalue },
                         success: function (data) 
                         {
                             $('#PartialViews').html(data);
